--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1 class="h3 mb-3 font-weight-normal">Sign Up</h1>
         <div class="mb-3">
             <label for="exampleInputEmail1" class="sr-only">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email address"
+            <input type="email" class="form-control ip-4" id="exampleInputEmail1" placeholder="Email address"
                 aria-describedby="emailHelp">
         </div>
         <div class="mb-3">
